Fix weird column header wrapping in table layout

--- a/media/src/scss/ltdc-base/_tablesorter.scss
+++ b/media/src/scss/ltdc-base/_tablesorter.scss
@@ -19,7 +19,7 @@
 
 .tablesorter-bootstrap .tablesorter-header-inner{position:relative;margin-left: 1.2rem; padding: 0}
 
-.tablesorter-bootstrap .sorter-false .tablesorter-header-inner{padding: 0}
+.tablesorter-bootstrap .sorter-false .tablesorter-header-inner{padding: 0; margin-left: 0;}
 
 .tablesorter-bootstrap thead .tablesorter-headerUnSorted:not(.sorter-false){background-image:url('/media/img/icon-unsorted.svg');}
 
